# weather-cli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Measurement.cpp  Measurement.h  QueryHandler.cpp  QueryHandler.h  SQLiteHandler.cpp  SQLiteHandler.h  Station.cpp  Station.h  WeatherHandler.cpp  WeatherHandler.h  barkeep.h  main.cpp  simple-test.cpp  tabulate.h
unterlagen/: 2. Grundlagen Software Entwicklung.pptx
utils/: downloader.sh
